--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "trivia-film",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://bruce-gordon.github.io/trivia-film",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "create-react-app": "^4.0.1",
     "he": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
